<resources>
    <string name="app_name">HowIstheweather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_temperature_unit">Temperature</string>
    <string name="rb_celsius">ºC</string>
    <string name="rb_fahrenheit">ºF</string>
    <string name="rb_english">English</string>
    <string name="rb_portuguese">Portuguese</string>
    <string name="title_description_language">Description Language</string>
    <string name="bt_save">Save</string>
    <string name="title_search_button">Search</string>
    <string name="hint_add_the_city_name">Add the city name</string>
    <string name="message_toast_offline">There are no internet connection</string>
    <string name="message_toast_online">There are internet connection</string>
    <string name="fab_description">Favorite</string>
    <string name="iv_weather_image_description">Weather Image</string>
    <string name="tv_city">City</string>
    <string name="tv_id">Id</string>
</resources>